introduce page 반응형, 햄버거(side-menu) 닫기버튼 예쁘게?

--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -194,11 +194,12 @@
     }
   }
   .carSpec {
-    width: 125% !important; 
+    width: 135% !important; 
   }
   
   .carSpec p {
     font-size: 0.9rem !important;
+    letter-spacing: -1px;
   }
 }
 
