--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -131,7 +131,16 @@
       }
     }
   }
-
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    background: none;
+    border: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+  }
   /* 시승 신청 버튼 스타일 */
   .test-drive-btn {
     width: 100%;
